Fixed pop-up spacing

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ ul li span:hover{
 }
 
 .popup h2{
-    text-align: center;
+    justify-content: center;
     color: white;
     margin: 30px 0px 10px;
 }
@@ -155,10 +155,10 @@ ul li span:hover{
 
 .cancel{
     position: absolute;
-    right: 10%;
+    right: 5%;
     height: 40px;
     width: 40px;
-    top: 10%;
+    top: 7%;
     font-size: 20px;
     text-align: center;
     line-height: 40px;
